--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,4 @@ outputs:
     description: 'The time we greeted you'
 runs:
   using: 'docker'
-  image: 'Dockerfile'
-  args:
-    - ${{ inputs.who-to-greet }}
+  image: docker://ghcr.io/shadowglass0/factorio-docker-for-github-actions:main
